--- a/views/date.erb
+++ b/views/date.erb
@@ -8,6 +8,6 @@
     </style>
   </head>
   <body>
-    <h1>The date is<%= Time.now %></h1>
+    <h1>The date is<%= Date.now %></h1>
   </body>
   </html>
