--- a/views/date.erb
+++ b/views/date.erb
@@ -8,6 +8,9 @@
     </style>
   </head>
   <body>
-    <h1>The date is<%= Date.now %></h1>
+    <h1>The date is
+    <%=
+    t = Time.new
+    t.month/t.day/t.year%></h1>
   </body>
   </html>
