Automatically backed up by Learn

--- a/views/date.erb
+++ b/views/date.erb
@@ -8,9 +8,6 @@
     </style>
   </head>
   <body>
-    <h1>The date is
-    <%=
-    t = Time.new
-    t.month/t.day/t.year%></h1>
+    <h1>The date is <%= Time.now %></h1>
   </body>
   </html>
