Automatically backed up by Learn

--- a/views/hello.erb
+++ b/views/hello.erb
@@ -8,7 +8,7 @@
     </style>
   </head>
   <body>
-    <h1>The date is <%=Time.now %></h1>
+    <h1>Hello World!</h1>
       <!-- <h2>testtesttestte</h2>
           <p>testtesttesttesttesttesttesttesttesttesttesttest </p> -->
     </body>
