Automatically backed up by Learn

--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,3 +1,8 @@
+<!-- 2. Create another template called `goodbye.erb` in `views`. In this view, use
+   ERB tags to create a variable `name`. This variable should store the name
+   `Joe`. Then, using ERB tags, say "Goodbye Joe" in an `h1` tag. This should get
+   rendered via a GET `/goodbye` route by your `App` controller in `app.rb`. -->
+
 <!DOCTYPE html>
   <html>
   <head>
@@ -8,6 +13,6 @@
     </style>
   </head>
   <body>
-    <h1>Goodbye Joe</h1>
+    <h1> <% name = "Joe"%> Goodbye <%= name %></h1>
   </body>
   </html>
