--- a/views/hello.erb
+++ b/views/hello.erb
@@ -8,7 +8,8 @@
     </style>
   </head>
   <body>
-    <h1><% name = "Joe"%> Goodbye <%= name %></h1>
+    <% name = "Joe"%>
+    <h1>Goodbye <%= name %></h1>
       <!-- <h2>testtesttestte</h2>
           <p>testtesttesttesttesttesttesttesttesttesttesttest </p> -->
     </body>
