Automatically backed up by Learn

--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -13,6 +13,7 @@
     </style>
   </head>
   <body>
-    <h1> <% name = "Joe"%> Goodbye <%= name %></h1>
+    <% name = "Joe"%>
+    <h1>Good bye <%= name %></h1>
   </body>
   </html>
