Automatically backed up by Learn

--- a/views/hello.erb
+++ b/views/hello.erb
@@ -8,8 +8,7 @@
     </style>
   </head>
   <body>
-    <% name = "Joe"%>
-    <h1>Good bye <%= name %></h1>
+    <h1>Hello World!</h1>
       <!-- <h2>testtesttestte</h2>
           <p>testtesttesttesttesttesttesttesttesttesttesttest </p> -->
     </body>
