--- a/views/date.erb
+++ b/views/date.erb
@@ -2,8 +2,12 @@
   <html>
   <head>
     <style type="text/css">
-    body { text-align:center;font-family:helvetica,arial;font-size:22px;
-    color:#888;margin:20px}
+    body {
+      text-align:center;
+      font-family:helvetica,arial;
+      font-size:22px;
+      color:#888;
+      margin:20px}
     </style>
   </head>
   <body>
