--- a/views/goodbye.erb
+++ b/views/goodbye.erb
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
   <html>
   <head>
-    <style type="text/css">
-    body { text-align:center;font-family:helvetica,arial;font-size:22px;
-    color:#888;margin:20px}
-    #c {margin:0 auto;width:500px;text-align:left}
-    </style>
+  <style type="text/css">
+  body {
+    text-align:center;
+    font-family:helvetica,arial;
+    font-size:22px;
+    color:#888;
+    margin:20px}
+  </style>
   </head>
   <body>
     <% name = "Joe"%>
